--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zKU-NB-Jpz">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Xr1-OG-Dwe">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -51,14 +51,7 @@
                                 <state key="normal" title="Button" image="kakao_login_large_wide-1"/>
                                 <connections>
                                     <action selector="kakaoLoginButtonTouchedWith_sender:" destination="zKU-NB-Jpz" eventType="touchUpInside" id="DEc-ws-bDO"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4FZ-ch-9KP">
-                                <rect key="frame" x="181" y="721" width="52" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="회원가입"/>
-                                <connections>
-                                    <action selector="testSigunUpButtonTouchedWith_sender:" destination="zKU-NB-Jpz" eventType="touchUpInside" id="3QB-dF-XVy"/>
+                                    <segue destination="6Am-ul-vdc" kind="show" id="7LU-9P-saK"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XmN-55-X8t">
@@ -78,12 +71,12 @@
             </objects>
             <point key="canvasLocation" x="-484.05797101449281" y="91.741071428571431"/>
         </scene>
-        <!--View Controller-->
+        <!--Sign Up View Controller-->
         <scene sceneID="ZNI-HR-NeN">
             <objects>
-                <viewController id="6Am-ul-vdc" sceneMemberID="viewController">
+                <viewController id="6Am-ul-vdc" customClass="SignUpViewController" customModule="WhereTruck" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Dsd-bo-qrJ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="회원가입화면" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="foK-6h-n2i">
@@ -104,6 +97,9 @@
                                 <rect key="frame" x="168" y="698" width="78" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="회원가입하기"/>
+                                <connections>
+                                    <action selector="touchUpSignUpButton:" destination="6Am-ul-vdc" eventType="touchUpInside" id="3yL-l4-DQ0"/>
+                                </connections>
                             </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="dRr-Cq-FOh">
                                 <rect key="frame" x="13" y="382" width="389" height="32"/>
@@ -132,17 +128,26 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="6Am-ul-vdc" id="Kyr-4J-aMH"/>
+                                </connections>
                             </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="wxC-AF-0kT"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="QBr-mT-isC"/>
+                    <connections>
+                        <outlet property="nickNameTextField" destination="zBv-E8-tOg" id="xQc-58-llt"/>
+                        <outlet property="selectRoleSegmentedControl" destination="dRr-Cq-FOh" id="Q6y-ml-yf5"/>
+                        <outlet property="signUpButton" destination="a1d-vZ-73B" id="wpE-1f-cg0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fMX-EP-ZTr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="262.31884057971018" y="91.741071428571431"/>
         </scene>
-        <!--Item-->
+        <!--Map-->
         <scene sceneID="Ycb-BM-4lb">
             <objects>
                 <viewController id="Xr1-OG-Dwe" customClass="MapViewController" customModule="WhereTruck" customModuleProvider="target" sceneMemberID="viewController">
@@ -150,9 +155,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="G9w-X4-vnu" customClass="NMFNaverMapView">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="800"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G9w-X4-vnu" customClass="NMFNaverMapView">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="지도화면" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M1q-LQ-BKq">
                                         <rect key="frame" x="178" y="99" width="59" height="21"/>
@@ -167,8 +171,14 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aaV-XI-NcV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="top" secondItem="G9w-X4-vnu" secondAttribute="top" id="0Q8-zz-MIG"/>
+                            <constraint firstItem="G9w-X4-vnu" firstAttribute="leading" secondItem="aaV-XI-NcV" secondAttribute="leading" id="QQ5-IA-HUS"/>
+                            <constraint firstItem="aaV-XI-NcV" firstAttribute="bottom" secondItem="G9w-X4-vnu" secondAttribute="bottom" id="VaO-3Y-9E9"/>
+                            <constraint firstItem="aaV-XI-NcV" firstAttribute="trailing" secondItem="G9w-X4-vnu" secondAttribute="trailing" id="urM-z5-jOU"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="vD7-cv-0wf"/>
+                    <tabBarItem key="tabBarItem" title="Map" id="vD7-cv-0wf"/>
                     <connections>
                         <outlet property="naverMapView" destination="G9w-X4-vnu" id="Ker-Gb-gX4"/>
                     </connections>
@@ -177,7 +187,7 @@
             </objects>
             <point key="canvasLocation" x="2334.7826086956525" y="91.741071428571431"/>
         </scene>
-        <!--Item-->
+        <!--My-->
         <scene sceneID="n3c-RS-0jT">
             <objects>
                 <viewController id="KzG-kD-u3D" sceneMemberID="viewController">
@@ -192,11 +202,16 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pfF-1c-0Dn">
+                                <rect key="frame" x="0.0" y="209" width="414" height="604"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="mjW-5C-Xrr"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="URn-Gn-5Q3"/>
+                    <tabBarItem key="tabBarItem" title="My" id="URn-Gn-5Q3"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Shr-q9-d6i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
