--- a/Base.lproj/Main.storyboard
+++ b/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="KzG-kD-u3D">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mHs-An-qMl">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -30,39 +30,21 @@
                     <view key="view" contentMode="scaleToFill" id="ry8-Wh-man">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uFV-VC-ead">
-                                <rect key="frame" x="34" y="324" width="346" height="47"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button" image="kakao_login_large_wide-1"/>
-                                <connections>
-                                    <action selector="kakaoLoginButtonTouchedWith_sender:" destination="zKU-NB-Jpz" eventType="touchUpInside" id="DEc-ws-bDO"/>
-                                    <segue destination="6Am-ul-vdc" kind="show" id="7LU-9P-saK"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XmN-55-X8t">
-                                <rect key="frame" x="91" y="389" width="232" height="46"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button" image="btnD_official"/>
-                            </button>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="CSY-wo-X3l"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <connections>
-                        <outlet property="kakaoLoginButton" destination="uFV-VC-ead" id="PS7-O6-3X5"/>
-                    </connections>
+                    <navigationItem key="navigationItem" id="4pZ-Nl-aoV"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RmA-Mr-YdA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-484.05797101449281" y="91.741071428571431"/>
+            <point key="canvasLocation" x="426.08695652173918" y="91.741071428571431"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="ZNI-HR-NeN">
             <objects>
                 <viewController id="6Am-ul-vdc" customClass="SignUpViewController" customModule="WhereTruck" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Dsd-bo-qrJ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="회원가입화면" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="foK-6h-n2i">
@@ -131,14 +113,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fMX-EP-ZTr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="262.31884057971018" y="91.741071428571431"/>
+            <point key="canvasLocation" x="1381" y="92"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="Ycb-BM-4lb">
             <objects>
                 <viewController id="Xr1-OG-Dwe" customClass="MapViewController" customModule="WhereTruck" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="c08-Wj-lOj">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="azz-3K-a8l" customClass="NMFNaverMapView">
@@ -150,54 +132,121 @@
                         <viewLayoutGuide key="safeArea" id="aaV-XI-NcV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" selectedImage="map" catalog="system" id="vD7-cv-0wf"/>
+                    <tabBarItem key="tabBarItem" title="" image="map" catalog="system" selectedImage="map" id="vD7-cv-0wf"/>
                     <connections>
                         <outlet property="naverMapView" destination="azz-3K-a8l" id="PwA-1j-cWO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lX5-rY-c5B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2334.7826086956525" y="91.741071428571431"/>
+            <point key="canvasLocation" x="3286" y="-560"/>
+        </scene>
+        <!--Detail Store View Controller-->
+        <scene sceneID="t3O-xq-QIu">
+            <objects>
+                <viewController id="DT9-z2-3ZC" customClass="DetailStoreViewController" customModule="WhereTruck" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="nsz-su-tPB">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="eXg-yd-iYu"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1bB-Xu-Com" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4072" y="-560"/>
+        </scene>
+        <!--List View Controller-->
+        <scene sceneID="SaP-Ym-glw">
+            <objects>
+                <viewController id="qHf-f4-dd2" customClass="ListViewController" customModule="WhereTruck" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eOt-wm-l9j">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="7EW-AM-LW5"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="list.bullet" catalog="system" selectedImage="list.bullet" id="hRK-CH-SbQ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Ud-fE-QLi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3286" y="88"/>
+        </scene>
+        <!--Favorite View Controller-->
+        <scene sceneID="eVi-81-3BW">
+            <objects>
+                <viewController id="Z9o-m1-qyO" customClass="FavoriteViewController" customModule="WhereTruck" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="L2Z-DO-ylz">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="kQ9-NX-OOU"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="" image="heart" catalog="system" selectedImage="heart" id="Aiv-B4-rfw"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Ff-80-NBS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3286" y="738"/>
         </scene>
         <!--My Info View Controller-->
         <scene sceneID="n3c-RS-0jT">
             <objects>
                 <viewController id="KzG-kD-u3D" customClass="MyInfoViewController" customModule="WhereTruck" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xp9-he-8wI">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="mjW-5C-Xrr"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" selectedImage="person.fill" catalog="system" id="URn-Gn-5Q3"/>
+                    <tabBarItem key="tabBarItem" title="" image="person.fill" catalog="system" selectedImage="person.fill" id="URn-Gn-5Q3"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Shr-q9-d6i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3089.8550724637685" y="91.741071428571431"/>
+            <point key="canvasLocation" x="3286" y="1394"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="gHh-q0-S4i">
             <objects>
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="mHs-An-qMl" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yoH-60-MjG">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="yoH-60-MjG">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
                         <segue destination="Xr1-OG-Dwe" kind="relationship" relationship="viewControllers" id="HGV-WP-UUR"/>
+                        <segue destination="qHf-f4-dd2" kind="relationship" relationship="viewControllers" id="PEH-KF-Duk"/>
+                        <segue destination="Z9o-m1-qyO" kind="relationship" relationship="viewControllers" id="nIg-C0-NJb"/>
                         <segue destination="KzG-kD-u3D" kind="relationship" relationship="viewControllers" id="l3T-zw-AQS"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mqf-Pz-bsg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1424.6376811594205" y="91.741071428571431"/>
+            <point key="canvasLocation" x="2334.7826086956525" y="91.741071428571431"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="W5e-0c-wZn">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ixK-hV-3dM" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0mj-Py-wtS">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="zKU-NB-Jpz" kind="relationship" relationship="rootViewController" id="yBw-mj-ty7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WJs-4V-TIq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-484.05797101449281" y="91.741071428571431"/>
         </scene>
     </scenes>
     <resources>
-        <image name="btnD_official" width="920" height="200"/>
-        <image name="kakao_login_large_wide-1" width="600" height="90"/>
+        <image name="heart" catalog="system" width="128" height="109"/>
+        <image name="list.bullet" catalog="system" width="128" height="88"/>
         <image name="map" catalog="system" width="128" height="110"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <systemColor name="systemBackgroundColor">
